IntelliJ automated IDE cleanups. Misc refactorings and optimizations.  Still a lot of potential for more optimization.  Converted Test.java to actual JUnit test.