@@ -1,18 +1,13 @@
 package parser;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
-
-import org.json.JSONObject;
-
 import io.github.vletard.analogy.SubtypeRebuilder;
 import io.github.vletard.analogy.set.ImmutableSet;
 import io.github.vletard.analogy.tuple.Tuple;
+import org.json.JSONObject;
 import reasoner.Dictionary;
 import util.Pair;
+
+import java.util.*;
 
 public class Polymorpheme extends Writable {
 
@@ -21,25 +16,19 @@ public class Polymorpheme extends Writable {
   
   private static final Map<Object, SubtypeRebuilder<?, ?>> BUILDER_MAP;
   static {
-    Map<Object, SubtypeRebuilder<?, ? extends IEMLUnit>> map = new HashMap<Object, SubtypeRebuilder<?, ? extends IEMLUnit>>();
-    map.put("constant", MorphemeSet.BUILDER);
-    map.put("groups", new SubtypeRebuilder<ImmutableSet<PolymorphemeGroup>, IEMLSet<PolymorphemeGroup>>() {
-      @Override
-      public IEMLSet<PolymorphemeGroup> rebuild(ImmutableSet<PolymorphemeGroup> object) {
-        return new IEMLSet<PolymorphemeGroup>(object.asSet());
-      }
-    });
-    BUILDER_MAP = Collections.unmodifiableMap(map);
+    BUILDER_MAP = Map.of("constant", MorphemeSet.BUILDER, "groups",
+      (SubtypeRebuilder<ImmutableSet<PolymorphemeGroup>, IEMLSet<PolymorphemeGroup>>)
+            object -> new IEMLSet<>(object.asSet()));
   }
   
-  public static final WritableBuilder<Polymorpheme> BUILDER = new WritableBuilder<Polymorpheme>(BUILDER_MAP) {
+  public static final WritableBuilder<Polymorpheme> BUILDER = new WritableBuilder<>(BUILDER_MAP) {
 
     @Override
     public Polymorpheme parse(String usl) throws ParseException {
       Pair<Polymorpheme, Integer> parse = Polymorpheme.parse(usl);
-      if (parse.getSecond() != usl.length())
-        throw new ParseException(Polymorpheme.class, parse.getSecond(), usl);
-      return parse.getFirst();
+      if (parse.second != usl.length())
+        throw new ParseException(Polymorpheme.class, parse.second, usl);
+      return parse.first;
     }
 
     @Override
@@ -100,7 +89,7 @@ public class Polymorpheme extends Writable {
     if (type.contentEquals("polymorpheme"))
       return true;
     else if (type.contentEquals("morpheme")) {  // irregular value, should be uniformized
-      return (obj.isNull("constant") || obj.getJSONArray("constant").length() == 1) && obj.getJSONArray("groups").length() == 0;
+      return (obj.isNull("constant") || obj.getJSONArray("constant").length() == 1) && obj.getJSONArray("groups").isEmpty();
       //      int total = obj.getJSONArray("constant").length();
       //      for (int i = 0; i < obj.getJSONArray("groups").length(); i++)
       //        total += obj.getJSONArray("groups").getJSONArray(i).length();
@@ -118,13 +107,13 @@ public class Polymorpheme extends Writable {
       final IEMLSet<PolymorphemeGroup> groups;
 
       {
-        HashSet<PolymorphemeGroup> group_set = new HashSet<PolymorphemeGroup>();
+        HashSet<PolymorphemeGroup> group_set = new HashSet<>();
         for (Tuple<IEMLUnit> group_tuple: (ImmutableSet<Tuple<IEMLUnit>>) t.get("groups"))
           group_set.add(PolymorphemeGroup.reBuild(group_tuple));
-        groups = new IEMLSet<PolymorphemeGroup>(group_set);
+        groups = new IEMLSet<>(group_set);
       }
       
-      HashMap<Object, IEMLUnit> map = new HashMap<Object, IEMLUnit>();
+      HashMap<Object, IEMLUnit> map = new HashMap<>();
       map.put("type", type);
       map.put("constant", constant);
       map.put("groups", groups);
@@ -173,59 +162,59 @@ public class Polymorpheme extends Writable {
     MorphemeSet constant;
     try {
       Pair<MorphemeSet, Integer> result = MorphemeSet.parse(input);
-      constant = result.getFirst();
-      offset += result.getSecond();
+      constant = result.first;
+      offset += result.second;
     } catch (ParseException e) {
       constant = new MorphemeSet();
     }
 
-    final HashSet<PolymorphemeGroup> g = new HashSet<PolymorphemeGroup>();
+    final HashSet<PolymorphemeGroup> g = new HashSet<>();
     try {
       while (true) {
         Pair<PolymorphemeGroup, Integer> result = PolymorphemeGroup.parse(input.substring(offset));
-        g.add(result.getFirst());
-        offset += result.getSecond();
+        g.add(result.first);
+        offset += result.second;
       }
-    } catch (ParseException e ) {};
+    } catch (ParseException e ) {}
 
     if (offset == 0)
       throw new ParseException(Polymorpheme.class, offset, input);
 
-    IEMLSet<PolymorphemeGroup> groups = new IEMLSet<PolymorphemeGroup>(g);
-    HashMap<Object, IEMLUnit> map = new HashMap<Object, IEMLUnit>();
+    IEMLSet<PolymorphemeGroup> groups = new IEMLSet<>(g);
+    HashMap<Object, IEMLUnit> map = new HashMap<>();
     map.put("type", new IEMLStringAttribute(typeName));
     map.put("constant", constant);
     map.put("groups", groups);
 
-    return new Pair<Polymorpheme, Integer>(new Polymorpheme(map, constant, groups), offset);
+    return new Pair<>(new Polymorpheme(map, constant, groups), offset);
   }
 
   @Override
   public Tuple<Object> mixedTranslation(String lang, int depth, Dictionary dictionary) {
-    HashMap<Object, Object> map = new HashMap<Object, Object>();
+    HashMap<Object, Object> map = new HashMap<>();
     if (depth <= 0) {
       try {
         map.put("translations", dictionary.get(this).get(lang));
-        return new Tuple<Object>(map);
+        return new Tuple<>(map);
       } catch (MissingTranslationException e) {
         // in case no translation exist for this word in the dictionary, the mixed translation continues deeper
       }
     }
-    HashSet<Object> constant = new HashSet<Object>();
+    HashSet<Object> constant = new HashSet<>();
     for (Morpheme m: this.constant)
       constant.add(m.mixedTranslation(lang, depth-1, dictionary));
 
-    ArrayList<HashSet<Object>> groups = new ArrayList<HashSet<Object>>();
+    ArrayList<HashSet<Object>> groups = new ArrayList<>();
     for (PolymorphemeGroup g: this.groups) {
-      HashSet<Object> group = new HashSet<Object>();
+      HashSet<Object> group = new HashSet<>();
       for (Morpheme m: g.getMorphemes())
         group.add(m.mixedTranslation(lang, depth-1, dictionary));
       groups.add(group);
     }
 
-    map.put("constant", new ImmutableSet<Object>(constant));
+    map.put("constant", new ImmutableSet<>(constant));
     for (int i = 0; i < groups.size(); i++)
-      map.put(i, new ImmutableSet<Object>(groups.get(i)));
-    return new Tuple<Object>(map);
+      map.put(i, new ImmutableSet<>(groups.get(i)));
+    return new Tuple<>(map);
   }
 }
